// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`searchInput > renders correctly without children props 1`] = `
<DocumentFragment>
  .emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  gap: 0.25rem;
}

.emotion-1 .emotion-6 {
  border: none;
}

.emotion-1 .emotion-12 {
  padding: 0;
}

.emotion-1 .el3h3g93 {
  border: none;
}

.emotion-3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  height: 3rem;
  background: #ffffff;
  border: 1px solid #d9dadd;
  border-radius: 0.25rem;
}

.emotion-3>.emotion-12 {
  color: #3f4250;
}

.emotion-3>.emotion-12::-webkit-input-placeholder {
  color: #727683;
}

.emotion-3>.emotion-12::-moz-placeholder {
  color: #727683;
}

.emotion-3>.emotion-12:-ms-input-placeholder {
  color: #727683;
}

.emotion-3>.emotion-12::placeholder {
  color: #727683;
}

.emotion-3[data-success='true'] {
  border-color: #22674e;
}

.emotion-3[data-error='true'] {
  border-color: #b3144d;
}

.emotion-3[data-readonly='true'] {
  background: #f9f9fa;
  border-color: #d9dadd;
}

.emotion-3[data-disabled='true'] {
  background: #f3f3f4;
  border-color: #e9eaeb;
}

.emotion-3[data-disabled='true']>.emotion-12 {
  color: #b5b7bd;
}

.emotion-3[data-disabled='true']>.emotion-12::-webkit-input-placeholder {
  color: #b5b7bd;
}

.emotion-3[data-disabled='true']>.emotion-12::-moz-placeholder {
  color: #b5b7bd;
}

.emotion-3[data-disabled='true']>.emotion-12:-ms-input-placeholder {
  color: #b5b7bd;
}

.emotion-3[data-disabled='true']>.emotion-12::placeholder {
  color: #b5b7bd;
}

.emotion-3:not([data-disabled='true']):not([data-readonly]):hover {
  border-color: #8c40ef;
}

.emotion-5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  padding: 1rem;
  border-right: 1px solid;
  border-color: inherit;
}

.emotion-5[data-size="small"] {
  padding: 0.5rem;
}

.emotion-7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  cursor: text;
}

.emotion-9 {
  vertical-align: middle;
  fill: #3f4250;
  height: 1rem;
  width: 1rem;
  min-width: 1rem;
  min-height: 1rem;
}

.emotion-9 .fillStroke {
  stroke: #3f4250;
  fill: none;
}

.emotion-11 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  border: none;
  outline: none;
  height: 100%;
  width: 100%;
  padding-left: 1rem;
  background: transparent;
  font-size: 0.875rem;
}

.emotion-11[data-size='large'] {
  font-size: 1rem;
}

.emotion-11[data-size='small'] {
  padding-left: 0.5rem;
}

<div
    data-testid="testing"
  >
    <div
      style="width: 100%;"
    >
      <div
        aria-controls="«r0»"
        aria-describedby="«r0»"
        class="styles__w40vpo9"
        tabindex="0"
      >
        <div
          class="emotion-0 emotion-1 emotion-2"
        >
          <div>
            <div
              class="emotion-3 emotion-4"
              data-disabled="false"
              data-error="false"
              data-readonly="false"
              data-success="false"
            >
              <div
                class="emotion-5 emotion-6"
                data-size="large"
              >
                <div
                  class="emotion-7 emotion-8"
                  data-testid="search-icon"
                >
                  <svg
                    class="emotion-9 emotion-10"
                    viewBox="0 0 16 16"
                  >
                    <path
                      clip-rule="evenodd"
                      d="M9.965 11.026a5 5 0 1 1 1.06-1.06l2.755 2.754a.75.75 0 1 1-1.06 1.06zM10.5 7a3.5 3.5 0 1 1-7 0 3.5 3.5 0 0 1 7 0"
                      fill-rule="evenodd"
                    />
                  </svg>
                </div>
              </div>
              <input
                aria-invalid="false"
                class="emotion-11 emotion-12"
                data-size="large"
                id="«r1»"
                placeholder="Type something"
                type="text"
                value=""
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`searchInput > renders with disabled prop 1`] = `
<DocumentFragment>
  .emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  gap: 0.25rem;
}

.emotion-1 .emotion-6 {
  border: none;
}

.emotion-1 .emotion-12 {
  padding: 0;
}

.emotion-1 .el3h3g93 {
  border: none;
}

.emotion-3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  height: 3rem;
  background: #ffffff;
  border: 1px solid #d9dadd;
  border-radius: 0.25rem;
}

.emotion-3>.emotion-12 {
  color: #3f4250;
}

.emotion-3>.emotion-12::-webkit-input-placeholder {
  color: #727683;
}

.emotion-3>.emotion-12::-moz-placeholder {
  color: #727683;
}

.emotion-3>.emotion-12:-ms-input-placeholder {
  color: #727683;
}

.emotion-3>.emotion-12::placeholder {
  color: #727683;
}

.emotion-3[data-success='true'] {
  border-color: #22674e;
}

.emotion-3[data-error='true'] {
  border-color: #b3144d;
}

.emotion-3[data-readonly='true'] {
  background: #f9f9fa;
  border-color: #d9dadd;
}

.emotion-3[data-disabled='true'] {
  background: #f3f3f4;
  border-color: #e9eaeb;
}

.emotion-3[data-disabled='true']>.emotion-12 {
  color: #b5b7bd;
}

.emotion-3[data-disabled='true']>.emotion-12::-webkit-input-placeholder {
  color: #b5b7bd;
}

.emotion-3[data-disabled='true']>.emotion-12::-moz-placeholder {
  color: #b5b7bd;
}

.emotion-3[data-disabled='true']>.emotion-12:-ms-input-placeholder {
  color: #b5b7bd;
}

.emotion-3[data-disabled='true']>.emotion-12::placeholder {
  color: #b5b7bd;
}

.emotion-3:not([data-disabled='true']):not([data-readonly]):hover {
  border-color: #8c40ef;
}

.emotion-5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  padding: 1rem;
  border-right: 1px solid;
  border-color: inherit;
}

.emotion-5[data-size="small"] {
  padding: 0.5rem;
}

.emotion-7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  cursor: text;
}

.emotion-9 {
  vertical-align: middle;
  fill: #b5b7bd;
  height: 1rem;
  width: 1rem;
  min-width: 1rem;
  min-height: 1rem;
}

.emotion-9 .fillStroke {
  stroke: #b5b7bd;
  fill: none;
}

.emotion-11 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  border: none;
  outline: none;
  height: 100%;
  width: 100%;
  padding-left: 1rem;
  background: transparent;
  font-size: 0.875rem;
}

.emotion-11[data-size='large'] {
  font-size: 1rem;
}

.emotion-11[data-size='small'] {
  padding-left: 0.5rem;
}

<div
    data-testid="testing"
  >
    <div
      style="width: 100%;"
    >
      <div
        aria-controls="«r3»"
        aria-describedby="«r3»"
        class="styles__w40vpo9"
        tabindex="0"
      >
        <div
          class="emotion-0 emotion-1 emotion-2"
        >
          <div>
            <div
              class="emotion-3 emotion-4"
              data-disabled="true"
              data-error="false"
              data-readonly="false"
              data-success="false"
            >
              <div
                class="emotion-5 emotion-6"
                data-size="large"
              >
                <div
                  class="emotion-7 emotion-8"
                  data-testid="search-icon"
                >
                  <svg
                    class="emotion-9 emotion-10"
                    viewBox="0 0 16 16"
                  >
                    <path
                      clip-rule="evenodd"
                      d="M9.965 11.026a5 5 0 1 1 1.06-1.06l2.755 2.754a.75.75 0 1 1-1.06 1.06zM10.5 7a3.5 3.5 0 1 1-7 0 3.5 3.5 0 0 1 7 0"
                      fill-rule="evenodd"
                    />
                  </svg>
                </div>
              </div>
              <input
                aria-invalid="false"
                class="emotion-11 emotion-12"
                data-size="large"
                disabled=""
                id="«r4»"
                placeholder="Type something"
                type="text"
                value=""
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`searchInput > renders with error prop 1`] = `
<DocumentFragment>
  .emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  gap: 0.25rem;
}

.emotion-1 .emotion-6 {
  border: none;
}

.emotion-1 .emotion-12 {
  padding: 0;
}

.emotion-1 .el3h3g93 {
  border: none;
}

.emotion-3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  height: 3rem;
  background: #ffffff;
  border: 1px solid #d9dadd;
  border-radius: 0.25rem;
}

.emotion-3>.emotion-12 {
  color: #3f4250;
}

.emotion-3>.emotion-12::-webkit-input-placeholder {
  color: #727683;
}

.emotion-3>.emotion-12::-moz-placeholder {
  color: #727683;
}

.emotion-3>.emotion-12:-ms-input-placeholder {
  color: #727683;
}

.emotion-3>.emotion-12::placeholder {
  color: #727683;
}

.emotion-3[data-success='true'] {
  border-color: #22674e;
}

.emotion-3[data-error='true'] {
  border-color: #b3144d;
}

.emotion-3[data-readonly='true'] {
  background: #f9f9fa;
  border-color: #d9dadd;
}

.emotion-3[data-disabled='true'] {
  background: #f3f3f4;
  border-color: #e9eaeb;
}

.emotion-3[data-disabled='true']>.emotion-12 {
  color: #b5b7bd;
}

.emotion-3[data-disabled='true']>.emotion-12::-webkit-input-placeholder {
  color: #b5b7bd;
}

.emotion-3[data-disabled='true']>.emotion-12::-moz-placeholder {
  color: #b5b7bd;
}

.emotion-3[data-disabled='true']>.emotion-12:-ms-input-placeholder {
  color: #b5b7bd;
}

.emotion-3[data-disabled='true']>.emotion-12::placeholder {
  color: #b5b7bd;
}

.emotion-3:not([data-disabled='true']):not([data-readonly]):hover {
  border-color: #8c40ef;
}

.emotion-5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  padding: 1rem;
  border-right: 1px solid;
  border-color: inherit;
}

.emotion-5[data-size="small"] {
  padding: 0.5rem;
}

.emotion-7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  cursor: text;
}

.emotion-9 {
  vertical-align: middle;
  fill: #3f4250;
  height: 1rem;
  width: 1rem;
  min-width: 1rem;
  min-height: 1rem;
}

.emotion-9 .fillStroke {
  stroke: #3f4250;
  fill: none;
}

.emotion-11 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  border: none;
  outline: none;
  height: 100%;
  width: 100%;
  padding-left: 1rem;
  background: transparent;
  font-size: 0.875rem;
}

.emotion-11[data-size='large'] {
  font-size: 1rem;
}

.emotion-11[data-size='small'] {
  padding-left: 0.5rem;
}

.emotion-13 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  gap: 0.5rem;
  padding: 0 1rem;
}

.emotion-15 {
  vertical-align: middle;
  fill: #b3144d;
  height: 1rem;
  width: 1rem;
  min-width: 1rem;
  min-height: 1rem;
}

.emotion-15 .fillStroke {
  stroke: #b3144d;
  fill: none;
}

.emotion-19 {
  color: #b3144d;
  font-size: 0.75rem;
  font-family: Inter,sans-serif;
  font-weight: 400;
  letter-spacing: 0;
  line-height: 1rem;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

<div
    data-testid="testing"
  >
    <div
      style="width: 100%;"
    >
      <div
        aria-controls="«rh»"
        aria-describedby="«rh»"
        class="styles__w40vpo9"
        tabindex="0"
      >
        <div
          class="emotion-0 emotion-1 emotion-2"
        >
          <div>
            <div
              class="emotion-3 emotion-4"
              data-disabled="false"
              data-error="true"
              data-readonly="false"
              data-success="false"
            >
              <div
                class="emotion-5 emotion-6"
                data-size="large"
              >
                <div
                  class="emotion-7 emotion-8"
                  data-testid="search-icon"
                >
                  <svg
                    class="emotion-9 emotion-10"
                    viewBox="0 0 16 16"
                  >
                    <path
                      clip-rule="evenodd"
                      d="M9.965 11.026a5 5 0 1 1 1.06-1.06l2.755 2.754a.75.75 0 1 1-1.06 1.06zM10.5 7a3.5 3.5 0 1 1-7 0 3.5 3.5 0 0 1 7 0"
                      fill-rule="evenodd"
                    />
                  </svg>
                </div>
              </div>
              <input
                aria-invalid="true"
                class="emotion-11 emotion-12"
                data-size="large"
                id="«ri»"
                placeholder="Type something"
                type="text"
                value=""
              />
              <div
                class="emotion-13 emotion-14"
              >
                <svg
                  class="emotion-15 emotion-10"
                  viewBox="0 0 16 16"
                >
                  <path
                    clip-rule="evenodd"
                    d="M8 15C11.866 15 15 11.866 15 8C15 4.13401 11.866 1 8 1C4.13401 1 1 4.13401 1 8C1 11.866 4.13401 15 8 15ZM8 4C8.41421 4 8.75 4.33579 8.75 4.75V7.75C8.75 8.16421 8.41421 8.5 8 8.5C7.58579 8.5 7.25 8.16421 7.25 7.75V4.75C7.25 4.33579 7.58579 4 8 4ZM8 12C8.55228 12 9 11.5523 9 11C9 10.4477 8.55228 10 8 10C7.44772 10 7 10.4477 7 11C7 11.5523 7.44772 12 8 12Z"
                    fill-rule="evenodd"
                  />
                </svg>
              </div>
            </div>
          </div>
          <p
            class="emotion-19 emotion-20"
          >
            there is an error
          </p>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`searchInput > renders with shortcut prop > as array of string 1`] = `
<DocumentFragment>
  .emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  gap: 0.25rem;
}

.emotion-1 .emotion-6 {
  border: none;
}

.emotion-1 .emotion-12 {
  padding: 0;
}

.emotion-1 .emotion-14 {
  border: none;
}

.emotion-3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  height: 3rem;
  background: #ffffff;
  border: 1px solid #d9dadd;
  border-radius: 0.25rem;
}

.emotion-3>.emotion-12 {
  color: #3f4250;
}

.emotion-3>.emotion-12::-webkit-input-placeholder {
  color: #727683;
}

.emotion-3>.emotion-12::-moz-placeholder {
  color: #727683;
}

.emotion-3>.emotion-12:-ms-input-placeholder {
  color: #727683;
}

.emotion-3>.emotion-12::placeholder {
  color: #727683;
}

.emotion-3[data-success='true'] {
  border-color: #22674e;
}

.emotion-3[data-error='true'] {
  border-color: #b3144d;
}

.emotion-3[data-readonly='true'] {
  background: #f9f9fa;
  border-color: #d9dadd;
}

.emotion-3[data-disabled='true'] {
  background: #f3f3f4;
  border-color: #e9eaeb;
}

.emotion-3[data-disabled='true']>.emotion-12 {
  color: #b5b7bd;
}

.emotion-3[data-disabled='true']>.emotion-12::-webkit-input-placeholder {
  color: #b5b7bd;
}

.emotion-3[data-disabled='true']>.emotion-12::-moz-placeholder {
  color: #b5b7bd;
}

.emotion-3[data-disabled='true']>.emotion-12:-ms-input-placeholder {
  color: #b5b7bd;
}

.emotion-3[data-disabled='true']>.emotion-12::placeholder {
  color: #b5b7bd;
}

.emotion-3:not([data-disabled='true']):not([data-readonly]):hover {
  border-color: #8c40ef;
}

.emotion-5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  padding: 1rem;
  border-right: 1px solid;
  border-color: inherit;
}

.emotion-5[data-size="small"] {
  padding: 0.5rem;
}

.emotion-7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  cursor: text;
}

.emotion-9 {
  vertical-align: middle;
  fill: #3f4250;
  height: 1rem;
  width: 1rem;
  min-width: 1rem;
  min-height: 1rem;
}

.emotion-9 .fillStroke {
  stroke: #3f4250;
  fill: none;
}

.emotion-11 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  border: none;
  outline: none;
  height: 100%;
  width: 100%;
  padding-left: 1rem;
  background: transparent;
  font-size: 0.875rem;
}

.emotion-11[data-size='large'] {
  font-size: 1rem;
}

.emotion-11[data-size='small'] {
  padding-left: 0.5rem;
}

.emotion-13 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  padding: 0 1rem;
  border-left: 1px solid;
  border-color: inherit;
}

.emotion-15 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  gap: 0.25rem;
  cursor: text;
}

.emotion-17 {
  cursor: default;
  background: #f9f9fa;
  border-radius: 0.25rem;
  border: 0.5px solid #e9eaeb;
  min-width: 1.5rem;
  height: 1.5rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-17[data-prominence='strong'] {
  background-color: #151a2d;
  border-color: #d9dadd;
}

.emotion-17[data-prominence='strong'][data-disabled="true"] {
  background-color: #e9eaeb;
  border-color: #e9eaeb;
}

.emotion-17[data-disabled='true'] {
  background-color: #f3f3f4;
  border-color: #d9dadd;
  cursor: not-allowed;
}

.emotion-17[data-sentiment="primary"] {
  background-color: #f1eefc;
  border-color: #8c40ef;
}

.emotion-17[data-sentiment="primary"][data-prominence='strong'] {
  background-color: #8c40ef;
}

.emotion-17[data-sentiment="primary"][data-prominence='strong'][data-disabled="true"] {
  background-color: #e5dbfd;
}

.emotion-17[data-sentiment="primary"][data-disabled='true'] {
  background: #f6f5fd;
  border-color: #e9eaeb;
  cursor: not-allowed;
}

.emotion-17[data-size="small"] {
  min-width: 1.25rem;
  height: 1.25rem;
}

.emotion-21 {
  color: #3f4250;
  font-size: 0.75rem;
  font-family: Inter,sans-serif;
  font-weight: 400;
  letter-spacing: 0;
  line-height: 1rem;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

<div
    data-testid="testing"
  >
    <div
      style="width: 100%;"
    >
      <div
        aria-controls="«rb»"
        aria-describedby="«rb»"
        class="styles__w40vpo9"
        tabindex="0"
      >
        <div
          class="emotion-0 emotion-1 emotion-2"
        >
          <div>
            <div
              class="emotion-3 emotion-4"
              data-disabled="false"
              data-error="false"
              data-readonly="false"
              data-success="false"
            >
              <div
                class="emotion-5 emotion-6"
                data-size="large"
              >
                <div
                  class="emotion-7 emotion-8"
                  data-testid="search-icon"
                >
                  <svg
                    class="emotion-9 emotion-10"
                    viewBox="0 0 16 16"
                  >
                    <path
                      clip-rule="evenodd"
                      d="M9.965 11.026a5 5 0 1 1 1.06-1.06l2.755 2.754a.75.75 0 1 1-1.06 1.06zM10.5 7a3.5 3.5 0 1 1-7 0 3.5 3.5 0 0 1 7 0"
                      fill-rule="evenodd"
                    />
                  </svg>
                </div>
              </div>
              <input
                aria-invalid="false"
                class="emotion-11 emotion-12"
                data-size="large"
                id="«rc»"
                placeholder="Type something"
                type="text"
                value=""
              />
              <div
                class="emotion-13 emotion-14"
              >
                <div
                  class="emotion-15 emotion-16"
                >
                  <kbd
                    class="emotion-17 emotion-18"
                    data-prominence="default"
                    data-sentiment="neutral"
                    data-size="medium"
                    data-testid="key-Ctrl"
                  >
                    <span
                      class="emotion-21 emotion-22"
                    >
                      Ctrl
                    </span>
                  </kbd>
                  <kbd
                    class="emotion-17 emotion-18"
                    data-prominence="default"
                    data-sentiment="neutral"
                    data-size="medium"
                    data-testid="key-Shift"
                  >
                    <span
                      class="emotion-21 emotion-22"
                    >
                      ⇧
                    </span>
                  </kbd>
                  <kbd
                    class="emotion-17 emotion-18"
                    data-prominence="default"
                    data-sentiment="neutral"
                    data-size="medium"
                    data-testid="key-A"
                  >
                    <span
                      class="emotion-21 emotion-22"
                    >
                      A
                    </span>
                  </kbd>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`searchInput > renders with shortcut prop > as boolean 1`] = `
<DocumentFragment>
  .emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  gap: 0.25rem;
}

.emotion-1 .emotion-6 {
  border: none;
}

.emotion-1 .emotion-12 {
  padding: 0;
}

.emotion-1 .emotion-14 {
  border: none;
}

.emotion-3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  height: 3rem;
  background: #ffffff;
  border: 1px solid #d9dadd;
  border-radius: 0.25rem;
}

.emotion-3>.emotion-12 {
  color: #3f4250;
}

.emotion-3>.emotion-12::-webkit-input-placeholder {
  color: #727683;
}

.emotion-3>.emotion-12::-moz-placeholder {
  color: #727683;
}

.emotion-3>.emotion-12:-ms-input-placeholder {
  color: #727683;
}

.emotion-3>.emotion-12::placeholder {
  color: #727683;
}

.emotion-3[data-success='true'] {
  border-color: #22674e;
}

.emotion-3[data-error='true'] {
  border-color: #b3144d;
}

.emotion-3[data-readonly='true'] {
  background: #f9f9fa;
  border-color: #d9dadd;
}

.emotion-3[data-disabled='true'] {
  background: #f3f3f4;
  border-color: #e9eaeb;
}

.emotion-3[data-disabled='true']>.emotion-12 {
  color: #b5b7bd;
}

.emotion-3[data-disabled='true']>.emotion-12::-webkit-input-placeholder {
  color: #b5b7bd;
}

.emotion-3[data-disabled='true']>.emotion-12::-moz-placeholder {
  color: #b5b7bd;
}

.emotion-3[data-disabled='true']>.emotion-12:-ms-input-placeholder {
  color: #b5b7bd;
}

.emotion-3[data-disabled='true']>.emotion-12::placeholder {
  color: #b5b7bd;
}

.emotion-3:not([data-disabled='true']):not([data-readonly]):hover {
  border-color: #8c40ef;
}

.emotion-5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  padding: 1rem;
  border-right: 1px solid;
  border-color: inherit;
}

.emotion-5[data-size="small"] {
  padding: 0.5rem;
}

.emotion-7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  cursor: text;
}

.emotion-9 {
  vertical-align: middle;
  fill: #3f4250;
  height: 1rem;
  width: 1rem;
  min-width: 1rem;
  min-height: 1rem;
}

.emotion-9 .fillStroke {
  stroke: #3f4250;
  fill: none;
}

.emotion-11 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  border: none;
  outline: none;
  height: 100%;
  width: 100%;
  padding-left: 1rem;
  background: transparent;
  font-size: 0.875rem;
}

.emotion-11[data-size='large'] {
  font-size: 1rem;
}

.emotion-11[data-size='small'] {
  padding-left: 0.5rem;
}

.emotion-13 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  padding: 0 1rem;
  border-left: 1px solid;
  border-color: inherit;
}

.emotion-15 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  gap: 0.25rem;
  cursor: text;
}

.emotion-17 {
  cursor: default;
  background: #f9f9fa;
  border-radius: 0.25rem;
  border: 0.5px solid #e9eaeb;
  min-width: 1.5rem;
  height: 1.5rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-17[data-prominence='strong'] {
  background-color: #151a2d;
  border-color: #d9dadd;
}

.emotion-17[data-prominence='strong'][data-disabled="true"] {
  background-color: #e9eaeb;
  border-color: #e9eaeb;
}

.emotion-17[data-disabled='true'] {
  background-color: #f3f3f4;
  border-color: #d9dadd;
  cursor: not-allowed;
}

.emotion-17[data-sentiment="primary"] {
  background-color: #f1eefc;
  border-color: #8c40ef;
}

.emotion-17[data-sentiment="primary"][data-prominence='strong'] {
  background-color: #8c40ef;
}

.emotion-17[data-sentiment="primary"][data-prominence='strong'][data-disabled="true"] {
  background-color: #e5dbfd;
}

.emotion-17[data-sentiment="primary"][data-disabled='true'] {
  background: #f6f5fd;
  border-color: #e9eaeb;
  cursor: not-allowed;
}

.emotion-17[data-size="small"] {
  min-width: 1.25rem;
  height: 1.25rem;
}

.emotion-21 {
  color: #3f4250;
  font-size: 0.75rem;
  font-family: Inter,sans-serif;
  font-weight: 400;
  letter-spacing: 0;
  line-height: 1rem;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

<div
    data-testid="testing"
  >
    <div
      style="width: 100%;"
    >
      <div
        aria-controls="«r6»"
        aria-describedby="«r6»"
        class="styles__w40vpo9"
        tabindex="0"
      >
        <div
          class="emotion-0 emotion-1 emotion-2"
        >
          <div>
            <div
              class="emotion-3 emotion-4"
              data-disabled="false"
              data-error="false"
              data-readonly="false"
              data-success="false"
            >
              <div
                class="emotion-5 emotion-6"
                data-size="large"
              >
                <div
                  class="emotion-7 emotion-8"
                  data-testid="search-icon"
                >
                  <svg
                    class="emotion-9 emotion-10"
                    viewBox="0 0 16 16"
                  >
                    <path
                      clip-rule="evenodd"
                      d="M9.965 11.026a5 5 0 1 1 1.06-1.06l2.755 2.754a.75.75 0 1 1-1.06 1.06zM10.5 7a3.5 3.5 0 1 1-7 0 3.5 3.5 0 0 1 7 0"
                      fill-rule="evenodd"
                    />
                  </svg>
                </div>
              </div>
              <input
                aria-invalid="false"
                class="emotion-11 emotion-12"
                data-size="large"
                id="«r7»"
                placeholder="Type something"
                type="text"
                value=""
              />
              <div
                class="emotion-13 emotion-14"
              >
                <div
                  class="emotion-15 emotion-16"
                >
                  <kbd
                    class="emotion-17 emotion-18"
                    data-prominence="default"
                    data-sentiment="neutral"
                    data-size="medium"
                    data-testid="key-Ctrl"
                  >
                    <span
                      class="emotion-21 emotion-22"
                    >
                      Ctrl
                    </span>
                  </kbd>
                  <kbd
                    class="emotion-17 emotion-18"
                    data-prominence="default"
                    data-sentiment="neutral"
                    data-size="medium"
                    data-testid="key-K"
                  >
                    <span
                      class="emotion-21 emotion-22"
                    >
                      K
                    </span>
                  </kbd>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
